# InComeIQ

./: .gitignore  Dockerfile  README.md  download_data.py  pyproject.toml  requirements.txt  run.py  setup.py
api/: index.py
config/: feature_config.py  settings.py
core/: exceptions.py  logging.py  utils.py
data/: ingestion.py  prediction_history.db  preprocessing.py
models/: trainer.py
pipelines/: predict.py  train.py
web/: api.py  app.py  models.py  routes.py  validators.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: base.html  home.html  results.html
